security/vault/k8s_manifest_examples/pod-vault.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vaulttest
  namespace: devops-security-vault
spec:
  containers:
  - name: vault
    image: registry.hub.docker.com/library/vault:1.5.0
    command:
      - "/bin/sh"
      - "-c"
      - "sleep 10000"
