security/vault/k8s_manifest_examples/server-route-one-reencrypt.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vault
  namespace: devops-security-vault
  labels:
    helm.sh/chart: vault-0.6.0
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    app.kubernetes.io/managed-by: Helm
spec:
  host: one.vault-lab.developer.gov.bc.ca
  to:
    kind: Service
    name: vault-active
    weight: 100
  port:
    targetPort: 8200
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
    certificate: |-
      -----BEGIN CERTIFICATE-----
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      -----END RSA PRIVATE KEY-----
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      -----END CERTIFICATE-----
